--- a/main.css
+++ b/main.css
@@ -31,11 +31,12 @@ h1, h2, h3, p {
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
+    width:80%;
     max-width: 550px;
 }
 h1 { 
     font-family: "Georgia", serif;
-    font-size: 55px;
+    font-size: 50px;
     margin-top: 10px;
     margin-bottom: 0%;
 }
@@ -76,13 +77,13 @@ hr {
 }
 .quote {
     text-align: center;
-    width: 550px;
+    width: 350px;
     font-family: cursive;
     font-style: oblique;
 }
 .ending-quote {
     text-align: center;
-    width: 550px;
+    width: 350px;
     font-family: cursive;
     font-style: oblique;
 }
